# opengl-playground

./: LICENSE  README.md  fourmolu.yaml  game.cabal  hie.yaml  shell.nix
executable/: Main.hs
shaders/static/: shader.frag  shader.vert
