cabal-version: 2.4
name: opengl-playground
version: 0.1.0.0
license: MIT
author: Tom Harding
maintainer: i.am.tom.harding@gmail.com
category: Graphics

library
    exposed-modules: Camera
                     Control
                     Display
                     Entity
                     Maths
                     Model
                     Object.Parser
                     Renderer
                     Shader
                     Shader.Program
                     Shader.Static
                     Texture
    build-depends: attoparsec ^>= 0.14,
                   base ^>= 4.14,
                   bytestring ^>= 0.10,
                   containers ^>= 0.6,
                   free ^>= 5.1,
                   GLUtil ^>= 0.10,
                   lens ^>= 5.2,
                   OpenGL ^>= 3.0,
                   sdl2 ^>= 2.5,
                   vector ^>= 0.12
    ghc-options: -Wall -Wextra
    hs-source-dirs: library
    default-language: Haskell2010

executable opengl-playground
    main-is: Main.hs
    build-depends:
        base,
        opengl-playground,
        OpenGL,
        sdl2
    hs-source-dirs: executable
    default-language: Haskell2010
    ghc-options: -Wall -Wextra
