cabal-version: 2.4
name: game
version: 0.1.0.0
license: NONE
author: Tom Harding
maintainer: i.am.tom.harding@gmail.com
category: Game

library
    exposed-modules: Display
                     Model
                     Renderer
                     Shader
                     Texture
    build-depends: base,
                   bytestring,
                   containers,
                   GLUtil,
                   OpenGL,
                   sdl2 >= 2.5.3,
                   vector
    ghc-options: -Wall -Wextra
    hs-source-dirs: library
    default-language: Haskell2010

executable game
    main-is: Main.hs
    build-depends:
        base,
        bytestring,
        containers,
        game,
        OpenGL,
        sdl2,
        vector
    hs-source-dirs: executable
    default-language: Haskell2010
    ghc-options: -Wall -Wextra
